Closed Bug 772524 Opened 12 years ago Closed 12 years ago

Fix "data argument not used by format string" warnings in smslib.mm

Categories

(Core :: Hardware Abstraction Layer (HAL), defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla16

People

(Reporter: reuben, Assigned: reuben)

References

Details

Attachments

(1 file, 1 obsolete file)

      No description provided.
Attachment #640646 - Flags: review?(mounir)
Comment on attachment 640646 [details] [diff] [review]
Fix unused format strings with unused data arguments

Review of attachment 640646 [details] [diff] [review]:
-----------------------------------------------------------------

::: hal/cocoa/smslib.mm
@@ +416,5 @@
>  				failure_result = SMS_FAIL_OPENING;
>  			}
>  			continue;
>  		} else if (connection == 0) {
> +			LOG_ARG(@"'success', but didn't get a connection. return value 0x%x.\n", result);

Could you put that between parenthesis like: "[...] didn't get a connection (return value was: 0x%x).\n"?
Attachment #640646 - Flags: review?(mounir) → review+
Sure. Carrying r=mounir.
Attachment #640646 - Attachment is obsolete: true
Attachment #640685 - Flags: review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/fe989a36789a
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla16
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: