Bug 772524 - Fix "data argument not used by format string" warnings in smslib.mm. r=mounir